Polishing.
Add early return.